Fix dark mode styles

--- a/components/homePage/contact/contact-form.module.css
+++ b/components/homePage/contact/contact-form.module.css
@@ -1,5 +1,5 @@
 .card {
-  background: #fff;
+  background: rgb(var(--card-rgb));
   border-radius: var(--border-radius);
   padding: var(--size-3);
   margin: 0 var(--size-1);
@@ -43,7 +43,7 @@
 .form textarea:hover {
   outline: none;
   border-color: var(--color-2);
-  background-color: #fff;
+  background-color: rgb(var(--card-rgb));
   box-shadow: 0px 2px 10px rgba(var(--shadow-btn-color), 0.2),
     0px 4px 20px rgba(var(--shadow-btn-color), 0.3),
     0px 0px 0px 3px rgb(255, 255, 255);
