--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,7 +73,7 @@
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
+  --card-rgb: 255, 255, 255;
   --card-border-rgb: 131, 134, 135;
 
   --invert-percentage: 75%;
@@ -82,8 +82,8 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-start-rgb: 41, 50, 60;
+    --background-end-rgb: 72, 85, 99;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
     --secondary-glow: linear-gradient(
@@ -107,7 +107,7 @@
 
     --callout-rgb: 20, 20, 20;
     --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
+    --card-rgb: 43, 43, 43;
     --card-border-rgb: 200, 200, 200;
 
     --invert-percentage: 0%;
